# latentlm-tts

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: tts_lite.yaml  tts_qwen3_4b.yaml  tts_qwen_500m.yaml  tts_smoke.yaml
containers/: nemo_latentlm.def
examples/pbs/: build_sif.pbs  cache_emilia.pbs  eval_heldout.pbs  install_extras.pbs  run_tests.pbs  sample_lite.pbs  sample_tts.pbs  train_lite.pbs  train_tts.pbs
latent_lm/: __init__.py  checkpoint.py  checkpoint_lite.py  inference.py  losses.py  train.py  train_lite.py
latent_lm/data/: cache.py  collate.py  emilia.py  pipeline.py  text_tokenizer.py
latent_lm/models/: bridge_backbone.py  diffusion_head.py  latent_lm.py  tokenizer.py  torch_backbone.py
scripts/: cache_latents.py  launch.sh  sample_tts.py
tests/: test_cache.py  test_collate.py  test_losses.py  test_text_tokenizer.py  test_train_lite.py
