[project]
name = "latentlm-tts"
version = "0.1.0"
description = "LatentLM (next-token diffusion) text-to-speech on Emilia"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core deps for the lightweight (no-container) path: train_lite, inference,
# data preprocessing. All pip-installable.
dependencies = [
    "torch>=2.4",
    "numpy",
    "transformers>=4.46",   # VibeVoice tokenizer + text tokenizer
    "datasets>=3.0",        # Emilia streaming
    "diffusers>=0.31",      # DPM-Solver for sampling
    "soundfile>=0.12",
    "librosa>=0.10",
    "omegaconf>=2.3",
    "webdataset>=0.2",      # cached-latent shard I/O
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
# The large-scale Megatron training path (latent_lm.train) additionally needs
# megatron-core, megatron-bridge, and transformer-engine — these come from the
# NVIDIA NeMo container (see containers/nemo_latentlm.def), not from pip.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["latent_lm"]

[tool.ruff]
line-length = 100
target-version = "py310"
