[project]
name = "latentlm-tts"
version = "0.1.0"
description = "LatentLM (next-token diffusion) text-to-speech on Emilia"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Core deps for inference, data preprocessing, and the data side of training.
# All pip-installable.
dependencies = [
    "torch>=2.4",
    "numpy",
    "transformers>=4.46",   # VibeVoice tokenizer + text tokenizer
    "datasets>=3.0",        # Emilia streaming
    "diffusers>=0.31",      # DPM-Solver for sampling
    "soundfile>=0.12",
    "librosa>=0.10",
    "omegaconf>=2.3",
    "webdataset>=0.2",      # cached-latent shard I/O
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
# Training (latent_lm.train) needs the Megatron stack: megatron-core,
# megatron-bridge, and transformer-engine. These are pip-installable but require
# a matching CUDA toolchain (TE builds against it); the NVIDIA NeMo container
# (containers/nemo_latentlm.def) bundles them and is the path of least
# resistance. Not pinned here because the right versions track your CUDA/driver.
train = ["megatron-core", "megatron-bridge", "transformer-engine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["latent_lm"]

[tool.ruff]
line-length = 100
target-version = "py310"
